# multi_arm

./: README.md  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
iiwa_config-master/: README.md
iiwa_config-master/import_manipulate_modul/: CMakeLists.txt  package.xml
iiwa_config-master/import_manipulate_modul/src/: import_manipulate_modul.cpp  publish_tf.cpp
iiwa_config-master/moveit_config/dual_comau_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iiwa_config-master/moveit_config/dual_comau_moveit_config/config/: comau.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
iiwa_config-master/moveit_config/dual_comau_moveit_config/launch/: chomp_planning_pipeline.launch.xml  comau_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
iiwa_config-master/moveit_config/dual_iiwa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iiwa_config-master/moveit_config/dual_iiwa_moveit_config/config/: controllers.yaml  fake_controllers.yaml  iiwa14.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
iiwa_config-master/moveit_config/dual_iiwa_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  demo_iiwa.launch  dual_iiwa_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  iiwa14_moveit_controller_manager.launch.xml  move_group.launch  (+10 more)
iiwa_config-master/moveit_config/dual_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iiwa_config-master/robot_control/: CMakeLists.txt  package.xml
iiwa_config-master/robot_control/config/: comau_param.yaml  iiwa_param.yaml  panda_param.yaml
iiwa_config-master/robot_control/include/robot_control/: traj_coordinator.h  traj_worker.h
iiwa_config-master/robot_control/launch/: non_blocking.launch
iiwa_config-master/robot_control/msg/: dispatch_non_traj.msg  dispatch_result.msg
iiwa_config-master/robot_control/scripts/: adhoc_dispatcher.py  moveit_server.py  symb_maneuver_converter.py
iiwa_config-master/robot_control/src/: nonblocking_dual_driver.cpp  traj_coordinator.cpp  traj_worker.cpp
iiwa_config-master/robot_control/srv/: control_service.srv  moveit_service.srv  symbolic_maneuver.srv
iiwa_config-master/robot_description/: package.xml
iiwa_config-master/robot_description/launch/: display.launch  urdf.rviz
iiwa_config-master/robot_moveit_config/: CMakeLists.txt  package.xml
iiwa_config-master/robot_moveit_config/launch/: demo.launch
(+31 files in other folders)
